--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+
 </head>
 
 <body>
@@ -23,8 +26,10 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  RANDOM DESIGN CO.
-
+    <header class="page-header">
+    <h1>RANDOM DESIGN CO.</h1>
+    <i class="fas fa-bars"></i>
+    </header>
     --
 
     BE RANDOM
