styling page content

--- a/index.html
+++ b/index.html
@@ -30,22 +30,20 @@
     <h1>RANDOM DESIGN CO.</h1>
     <i class="fas fa-bars"></i>
     </header>
-    --
 
-    BE RANDOM
+    <section class="banner">
+    <h2>BE RANDOM</h2>
+    <p class="button">OMG YES!</p>
+    </section>
 
-    OMG YES!
+    <section class="page-content">
+      <article class="about">
+        <h3>ABOUT US</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
+      </article>
 
-    --
-
-    ABOUT US
-
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!
-
-    --
-
-    LATEST WORK
-
+      <article class="latest">
+        <h3>LATEST WORK</h3>
     PROJECT 1
     PROJECT 2
     PROJECT 3
@@ -53,11 +51,11 @@
     PROJECT 5
     PROJECT 6
     PROJECT 7
-
+  </article>
     --
-
-    © 2016 Random Design Co.
-
+    <footer>
+    <p>&copy; 2019 Random Design Co.</p>
+    </footer>
 
 
 
