--- a/index.html
+++ b/index.html
@@ -44,21 +44,61 @@
 
       <article class="latest">
         <h3>LATEST WORK</h3>
-    PROJECT 1
-    PROJECT 2
-    PROJECT 3
-    PROJECT 4
-    PROJECT 5
-    PROJECT 6
-    PROJECT 7
-  </article>
-    --
-    <footer>
-    <p>&copy; 2019 Random Design Co.</p>
-    </footer>
 
+          <a href="#">
+            <figure>
+              <img src="img/1-cocktail.jpeg" alt="Project1">
+              <figcaption>PROJECT 1</figcaption>
+            </figure>
+          </a>
 
+          <a href="#">
+            <figure>
+              <img src="img/2-disco.jpeg" alt="Project2">
+              <figcaption>PROJECT 2</figcaption>
+            </figure>
+          </a>
 
+          <a href="#">
+            <figure>
+              <img src="img/3-bookstore.jpeg" alt="Project3">
+              <figcaption>PROJECT 3</figcaption>
+            </figure>
+          </a>
+
+          <a href="#">
+            <figure>
+              <img src="img/4-traffic.jpeg" alt="Project4">
+              <figcaption>PROJECT 4</figcaption>
+            </figure>
+          </a>
+
+          <a href="#">
+            <figure>
+              <img src="img/5-concert.jpg" alt="Project5">
+              <figcaption>PROJECT 5</figcaption>
+            </figure>
+          </a>
+
+          <a href="#">
+            <figure>
+              <img src="img/6-nightlife.jpg" alt="Project6">
+              <figcaption>PROJECT 6</figcaption>
+            </figure>
+          </a>
+
+          <a href="#">
+            <figure>
+              <img src="img/7-bar.jpg" alt="Project7">
+              <figcaption>PROJECT 7</figcaption>
+            </figure>
+          </a>
+
+        </article>
+      </section>
+      <footer>
+      <p>&copy; 2019 Random Design Co.</p>
+      </footer>
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
