--- a/dynamic-content.html
+++ b/dynamic-content.html
@@ -41,9 +41,9 @@
         <h3>ABOUT US</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
+        <p>Additional paragraph 1: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
+        <p>Additional paragraph 2: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
 
       </article>
 
@@ -96,6 +96,27 @@
             <figure>
               <img src="img/7-bar.jpg" alt="Project7">
               <figcaption>PROJECT 7</figcaption>
+            </figure>
+          </a>
+
+          <a href="#">
+            <figure>
+              <img src="img/1-cocktail.jpeg" alt="Project8">
+              <figcaption>PROJECT 8</figcaption>
+            </figure>
+          </a>
+
+          <a href="#">
+            <figure>
+              <img src="img/2-disco.jpeg" alt="Project9">
+              <figcaption>PROJECT 9</figcaption>
+            </figure>
+          </a>
+
+          <a href="#">
+            <figure>
+              <img src="img/3-bookstore.jpeg" alt="Project10">
+              <figcaption>PROJECT 10</figcaption>
             </figure>
           </a>
 
