--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 
 </head>
@@ -27,76 +27,70 @@
 
   <!-- Add your site or application content here -->
     <header class="page-header">
-    <h1>RANDOM DESIGN CO.</h1>
-    <i class="fas fa-bars"></i>
+      <h1>RANDOM DESIGN CO.</h1>
+      <nav class="main-nav">
+        <i class="fas fa-bars"></i>
+      </nav>
     </header>
 
-    <section class="banner">
-    <h2>BE RANDOM</h2>
-    <p class="button">OMG YES!</p>
+    <section class="page-section jumbotron">
+      <h2>BE RANDOM</h2>
+      <a href="#" class="button">OMG YES!</a>
     </section>
 
-    <section class="page-content">
-      <article class="about">
-        <h3>ABOUT US</h3>
+    <section class="page-section">
+        <h2>ABOUT US</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
-      </article>
+    </section>
 
-      <article class="latest">
-        <h3>LATEST WORK</h3>
+    <section class="page-section">
+        <h2>LATEST WORK</h2>
 
-          <a href="#">
-            <figure>
-              <img src="img/1-cocktail.jpeg" alt="Project1">
-              <figcaption>PROJECT 1</figcaption>
-            </figure>
-          </a>
+        <a href="#">
+          <article class="projec-thumb">
+            <h3>Project 1</h3>
+            <img src="img/1-cocktail.jpeg" alt="cocktail">
+          </article>
+        </a>
 
-          <a href="#">
-            <figure>
-              <img src="img/2-disco.jpeg" alt="Project2">
-              <figcaption>PROJECT 2</figcaption>
-            </figure>
-          </a>
+        <a href="#">
+          <article class="projec-thumb">
+            <h3>Project 2</h3>
+            <img src="img/2-disco.jpeg" alt="disco">
+          </article>
+        </a>
 
-          <a href="#">
-            <figure>
-              <img src="img/3-bookstore.jpeg" alt="Project3">
-              <figcaption>PROJECT 3</figcaption>
-            </figure>
-          </a>
+        <a href="#">
+          <article class="projec-thumb">
+            <h3>Project 3</h3>
+            <img src="img/3-bookstore.jpeg" alt="bookstore">
+          </article>
+        </a>
 
-          <a href="#">
-            <figure>
-              <img src="img/4-traffic.jpeg" alt="Project4">
-              <figcaption>PROJECT 4</figcaption>
-            </figure>
-          </a>
+        <a href="#">
+          <article class="projec-thumb">
+            <h3>Project 4</h3>
+            <img src="img/4-traffic.jpeg" alt="traffic">
+          </article>
+        </a>
 
-          <a href="#">
-            <figure>
-              <img src="img/5-concert.jpg" alt="Project5">
-              <figcaption>PROJECT 5</figcaption>
-            </figure>
-          </a>
+        <a href="#">
+          <article class="projec-thumb">
+            <h3>Project 5</h3>
+            <img src="img/5-concert.jpg" alt="concert">
+          </article>
+        </a>
 
-          <a href="#">
-            <figure>
-              <img src="img/6-nightlife.jpg" alt="Project6">
-              <figcaption>PROJECT 6</figcaption>
-            </figure>
-          </a>
-
-          <a href="#">
-            <figure>
-              <img src="img/7-bar.jpg" alt="Project7">
-              <figcaption>PROJECT 7</figcaption>
-            </figure>
-          </a>
-
-        </article>
+        <a href="#">
+          <article class="projec-thumb">
+            <h3>Project 6</h3>
+            <img src="img/6-nightlife.jpg" alt="nightlife">
+          </article>
+        </a>
       </section>
-      <footer>
+
+
+      <footer class="page-footer">
       <p>&copy; 2019 Random Design Co.</p>
       </footer>
 
