--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
     </header>
 
     <section class="page-section jumbotron">
+      <div class="jumbotron_content">
       <h2>BE RANDOM</h2>
       <a href="#" class="button">OMG YES!</a>
+    </div>
+      <img class="jumbotron_bg" src="img/purple-bg.jpeg" alt="abstract purple pattern">
     </section>
 
     <section class="page-section">
@@ -47,42 +50,42 @@
         <h2>LATEST WORK</h2>
 
         <a href="#">
-          <article class="projec-thumb">
+          <article class="project-thumb">
             <h3>Project 1</h3>
             <img src="img/1-cocktail.jpeg" alt="cocktail">
           </article>
         </a>
 
         <a href="#">
-          <article class="projec-thumb">
+          <article class="project-thumb">
             <h3>Project 2</h3>
             <img src="img/2-disco.jpeg" alt="disco">
           </article>
         </a>
 
         <a href="#">
-          <article class="projec-thumb">
+          <article class="project-thumb">
             <h3>Project 3</h3>
             <img src="img/3-bookstore.jpeg" alt="bookstore">
           </article>
         </a>
 
         <a href="#">
-          <article class="projec-thumb">
+          <article class="project-thumb">
             <h3>Project 4</h3>
             <img src="img/4-traffic.jpeg" alt="traffic">
           </article>
         </a>
 
         <a href="#">
-          <article class="projec-thumb">
+          <article class="project-thumb">
             <h3>Project 5</h3>
             <img src="img/5-concert.jpg" alt="concert">
           </article>
         </a>
 
         <a href="#">
-          <article class="projec-thumb">
+          <article class="project-thumb">
             <h3>Project 6</h3>
             <img src="img/6-nightlife.jpg" alt="nightlife">
           </article>
