Project thumb and footer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
     <section class="page-section">
         <h2>LATEST WORK</h2>
-
+        
+        <div class="clearfix">
         <a href="#">
           <article class="project-thumb">
             <h3>Project 1</h3>
@@ -90,6 +91,7 @@
             <img src="img/6-nightlife.jpg" alt="nightlife">
           </article>
         </a>
+      </div>
       </section>
 
 
