--- a/dynamic-content.html
+++ b/dynamic-content.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Random Design Co // Dynamic Content</title>
+  <title>Random Design Co // Dynamic </title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,11 +11,11 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 
 </head>
@@ -27,108 +27,107 @@
 
   <!-- Add your site or application content here -->
     <header class="page-header">
-    <h1>RANDOM DESIGN CO.</h1>
-    <i class="fas fa-bars"></i>
+      <h1>RANDOM DESIGN CO.</h1>
+      <nav class="main-nav">
+        <i class="fas fa-bars"></i>
+      </nav>
     </header>
 
-    <section class="banner">
-    <h2>BE RANDOM</h2>
-    <p class="button">OMG YES!</p>
+    <section class="page-section jumbotron">
+      <div class="jumbotron_content">
+      <h2>BE RANDOM</h2>
+      <a href="#" class="button">OMG YES!</a>
+    </div>
+      <img class="jumbotron_bg" src="img/purple-bg.jpeg" alt="abstract purple pattern">
     </section>
 
-    <section class="page-content">
-      <article class="about">
-        <h3>ABOUT US</h3>
+    <section class="page-section">
+        <h2>ABOUT US</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
 
-        <p>Additional paragraph 1: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
 
-        <p>Additional paragraph 2: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
+    </section>
 
-      </article>
+    <section class="page-section">
+        <h2>LATEST WORK</h2>
 
-      <article class="latest">
-        <h3>LATEST WORK</h3>
+        <div class="clearfix">
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 1</h3>
+            <img src="img/1-cocktail.jpeg" alt="cocktail">
+          </article>
+        </a>
 
-          <a href="#">
-            <figure>
-              <img src="img/1-cocktail.jpeg" alt="Project1">
-              <figcaption>PROJECT 1</figcaption>
-            </figure>
-          </a>
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 2</h3>
+            <img src="img/2-disco.jpeg" alt="disco">
+          </article>
+        </a>
 
-          <a href="#">
-            <figure>
-              <img src="img/2-disco.jpeg" alt="Project2">
-              <figcaption>PROJECT 2</figcaption>
-            </figure>
-          </a>
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 3</h3>
+            <img src="img/3-bookstore.jpeg" alt="bookstore">
+          </article>
+        </a>
 
-          <a href="#">
-            <figure>
-              <img src="img/3-bookstore.jpeg" alt="Project3">
-              <figcaption>PROJECT 3</figcaption>
-            </figure>
-          </a>
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 4</h3>
+            <img src="img/4-traffic.jpeg" alt="traffic">
+          </article>
+        </a>
 
-          <a href="#">
-            <figure>
-              <img src="img/4-traffic.jpeg" alt="Project4">
-              <figcaption>PROJECT 4</figcaption>
-            </figure>
-          </a>
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 5</h3>
+            <img src="img/5-concert.jpg" alt="concert">
+          </article>
+        </a>
 
-          <a href="#">
-            <figure>
-              <img src="img/5-concert.jpg" alt="Project5">
-              <figcaption>PROJECT 5</figcaption>
-            </figure>
-          </a>
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 6</h3>
+            <img src="img/6-nightlife.jpg" alt="nightlife">
+          </article>
+        </a>
 
-          <a href="#">
-            <figure>
-              <img src="img/6-nightlife.jpg" alt="Project6">
-              <figcaption>PROJECT 6</figcaption>
-            </figure>
-          </a>
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 7</h3>
+            <img src="img/6-nightlife.jpg" alt="nightlife">
+          </article>
+        </a>
 
-          <a href="#">
-            <figure>
-              <img src="img/7-bar.jpg" alt="Project7">
-              <figcaption>PROJECT 7</figcaption>
-            </figure>
-          </a>
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 8</h3>
+            <img src="img/6-nightlife.jpg" alt="nightlife">
+          </article>
+        </a>
 
-          <a href="#">
-            <figure>
-              <img src="img/1-cocktail.jpeg" alt="Project8">
-              <figcaption>PROJECT 8</figcaption>
-            </figure>
-          </a>
-
-          <a href="#">
-            <figure>
-              <img src="img/2-disco.jpeg" alt="Project9">
-              <figcaption>PROJECT 9</figcaption>
-            </figure>
-          </a>
-
-          <a href="#">
-            <figure>
-              <img src="img/3-bookstore.jpeg" alt="Project10">
-              <figcaption>PROJECT 10</figcaption>
-            </figure>
-          </a>
-
-        </article>
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 9</h3>
+            <img src="img/6-nightlife.jpg" alt="nightlife">
+          </article>
+        </a>
+      </div>
       </section>
 
-      <section class="banner">
-      <h2>Contact US</h2>
-      <p class="button">info@randmdesignco.com</p>
-      </section>
+      <section class="page-section jumbotron">
+        <div class="jumbotron_content">
+        <h2>CONTACT US</h2>
+        <a href="#" class="button">info@randomdesignco.com</a>
+      </div>
+        <img class="jumbotron_bg" src="https://images.ecosia.org/ei751-1y-xUvJLVskuqKbUJrcD8=/0x390/smart/http%3A%2F%2F4.bp.blogspot.com%2F-MzZCzWI_6Xc%2FUIUQp1qPfzI%2FAAAAAAAAHpA%2FOTwHCJSWFAY%2Fs1600%2Fcats_animals_kittens_cat_kitten_cute_desktop_1680x1050_hd-wallpaper-753974.jpeg" alt="kitten">
 
-      <footer>
+
+      <footer class="page-footer">
       <p>&copy; 2019 Random Design Co.</p>
       </footer>
 
